--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ background: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: center;
+  position: inherit;
   padding: 0;
   margin: 0;
 }
@@ -79,7 +79,7 @@ background: transparent;
     margin-top: 50px;
 }
 .about-container{
-     min-height: 60vh;
+     /*min-height: 80vh;*/
      background-color: #97a8b1;
 }
 .about-underline{
@@ -108,4 +108,19 @@ background: transparent;
 /***footer section***/
 .footer-section-container{
     background-color: #7c7e81;
+}
+.btn--footer{
+    margin-top: 10px;
+    
+}
+.signup-text{
+    margin-top: 20px;
+    color: #f3f3f3;
+    font-size: 30px;
+    font-weight: 300;
+}
+.copyright{
+    font-family: "Exo", sans-serif;
+    color:  #f3f3f3;
+    font-size: 20px;
 }
