--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,3 +177,53 @@ height: 70px;
     color:  #f3f3f3;
     font-size: 20px;
 }
+/***********end of footer section******/
+
+/***********picture gallery section******/
+.gallery-image{
+    width:270px;
+    height: 180px;
+    padding: 10px;
+    margin: 10px;
+}
+.image-width{
+    width:100%;
+}
+.gallery-column{
+    padding: auto;
+    margin: auto;
+    display: block;
+}
+.picture-gallery{
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+}
+.picture-gallery .heading{
+    margin-bottom: 50px;
+    text-align: center;
+}
+.picture-gallery h1{
+    font-family: "Exo", sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+
+}
+.picture-gallery h6{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.picture-gallery img{
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+
+}
+
+.picture-gallery a{
+    color: #ff33ff;
+}
+.picture-gallery a:hover{
+    text-decoration: none;
+}
+
+/***********end of picture gallery section******/
