--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,36 +181,47 @@ height: 70px;
 
 /***********picture gallery section******/
 .gallery-image{
-    width:270px;
-    height: 180px;
+    width: 225px;
+    height: 225px;
     padding: 10px;
     margin: 10px;
 }
+
 .image-width{
     width:100%;
 }
 .gallery-column{
-    padding: auto;
+    padding: 5px;
     margin: auto;
-    display: block;
-}
+    text-align: center;
+    }
+/*.btn--gallery{
+    align-items: center;
+
+}*/
 .picture-gallery{
     padding-top: 60px;
     padding-bottom: 60px;
 
 }
-.picture-gallery .heading{
+/*.picture-gallery .heading{
     margin-bottom: 50px;
     text-align: center;
-}
-.picture-gallery h1{
+}*/
+.gallery-jumbotron h1{
     font-family: "Exo", sans-serif;
-    font-size: 1.5em;
+    font-size: 4em;
     font-weight: bold;
-
+    margin-bottom: 50px;
+    text-align: center;
+    text-transform: capitalize;
 }
 .picture-gallery h6{
     font-size: 20px;
+    font-weight: bold;
+}
+.gallery-jumbotron p{
+    font-size: 30px;
     font-weight: bold;
 }
 
@@ -220,10 +231,10 @@ height: 70px;
 }
 
 .picture-gallery a{
-    color: #ff33ff;
+    color:#9c949c;
 }
 .picture-gallery a:hover{
     text-decoration: none;
 }
 
-/***********end of picture gallery section******/
+/***********end of picture gallery section******/d
