--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,7 +244,8 @@ height: 70px;
     
      margin: 0;
      padding: 0;
-      background: url("../images/exo-band-bgpic3.jpg") center/ cover no-repeat;
+     overflow: hidden;
+     /* background: url("../images/exo-band-bgpic3.jpg") center/ cover no-repeat;*/
 
  }
 .music-column{
@@ -254,15 +255,15 @@ height: 70px;
 .music-heading{
     text-align: center;
     
-    color: #ffffff;
+    /*color: #ffffff;*/
     font-size: 1.5em;
     font-weight: bold;
 }
-.music-heading span{
+/*.music-heading span{
     background-color: #e4a7a7;
     padding: 6px;
     margin: 10px;
-}
+}*/
 /***********end of video section******/
 
 /***********start of video selling section******/
@@ -270,7 +271,8 @@ height: 70px;
     align-items: center;
     padding: 0;
     margin: 0;
-    background: url("../images/exo-band-bgpic1.jpg") center/ cover no-repeat;
+    overflow: hidden;
+    /*background: url("../images/exo-band-bgpic1.jpg") center/ cover no-repeat;*/
 
 
 }
@@ -290,14 +292,14 @@ height: 70px;
 .video-selling-heading{
     
     font-family: "Exo", sans-serif;
-    color: #f3f3f3;
+    /*color: #f3f3f3;*/
     font-weight: bold;
     text-align: center;
 }
-.video-selling-heading span{
+/*.video-selling-heading span{
      background-color: #b18299;
      padding: 5px;
-}
+}*/
 .exo-card-one{
     font-weight: bold;
     color: #f3f3f3;
