--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,8 +319,6 @@ height: 70px;
 .container-fluid.tour-container {
     padding: 0;
     margin: 0;
-    margin-right: 10px;
-    padding-right: 10px;
     
     width: 100%;
     align-items: center;
@@ -343,5 +341,23 @@ height: 70px;
    margin: 0;
    padding: 0;
 }
+@media(min-width:300px){
+    .btn--tour{
+        font-size: 15px;
+    }
+}
 
+.booking-header{
+   
+    font-family: "Exo" , sans-serif;
+    font-weight: bold;
+    text-align: center;
+    
+}
+.btn--booking{
+    
+    font-size: 20px;
+    margin: 20px;
+    
+}
 /***********end of tour section******/
