--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,12 +208,12 @@ height: 100 px;*/
 
 /***********picture gallery section******/
 
-.gallery-image {
+/*.gallery-image {
 	width: 225px;
 	height: 225px;
 	padding: 10px;
 	margin: 10px;
-}
+}*/
 
 .image-width {
 	width: 100%;
